--- a/css/styles.css
+++ b/css/styles.css
@@ -205,10 +205,10 @@ img{width: 100%; height: auto; display: block;}
     padding-top: 120px;
     padding-bottom: 120px;}
 .sec-four-item{background-color: var(--white-color);
-                width: 264px;
+                /*width: 264px;*/
+                width: 100%;
                 border-radius: 0px 0px 4px 4px;
-                box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-                }
+                box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);}
 .sec-four-h-two{ font-size: 36px;
                 line-height: 1.11;
                 text-align: center;
@@ -217,7 +217,11 @@ img{width: 100%; height: auto; display: block;}
                 color:  var(--darker-color);
                 margin: 0 auto;
                 margin-bottom: 72px;}
-.sec-four-list{gap: 24px; padding: 0; margin: 0;}
+.sec-four-list{gap: 24px; 
+               padding: 0; 
+               margin: 0;
+               display: flex;
+               flex-wrap: wrap;}
 .sec-four-name{
     margin: 0;
     font-weight: 500;
