--- a/css/styles.css
+++ b/css/styles.css
@@ -647,5 +647,5 @@ footer .logo{margin: 0;}
 }
 @media screen and (min-width: 766px) {
     .container{width: 720px;}
-    .sec-four-list{width: calc((100% - 24px) / 2);}
+    .sec-four-item{width: calc((100% - 24px) / 2);}
 }
