--- a/css/styles.css
+++ b/css/styles.css
@@ -642,10 +642,19 @@ footer .logo{margin: 0;}
 /*ADAPTATION*/
 
 
-@media screen and (min-width: 426px) {
+@media screen and (min-width: 428px) {
     .container{width: 448px;}
 }
-@media screen and (min-width: 766px) {
+@media screen and (min-width: 768px) {
     .container{width: 720px;}
+    .section{top: 96px;
+             padding-bottom: 96px;}
+             .sec-four-h-two{padding-bottom: 72px;}
     .sec-four-item{width: calc((100% - 24px) / 2);}
+}
+@media screen and (min-width: 1158px) {
+    .container{width: 1200px;}
+    .section{padding-bottom: 120px;
+             top: 120px;}
+    .sec-four-item{width: calc((100% - 72px) / 4);}
 }
