--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,8 @@ body {
             padding-bottom: 24px;}
 .header-contacts{color: var(--gray-color); 
                  font-style: normal;
-                 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+                 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                 flex-wrap: wrap;}
 .header-contacts:hover, .header-contacts:focus{color: var(--violet-color);}
 .header-add{list-style: none;
             font-style: normal; 
@@ -155,7 +156,8 @@ body {
                 overflow: hidden;}
 .sec-two-list{gap: 24px;
               padding: 0; 
-              margin: 0;}
+              margin: 0;
+              flex-wrap: wrap;}
 .sec-two-li{/*width: calc((100% - 72px) / 4);*/
             width: 100%;}
 .sec-two-item{padding: 0;margin: 0 auto;
@@ -273,7 +275,8 @@ img{width: 100%; height: auto; display: block;}
     color: var(--darker-color);}
 .sec-five-list{display: flex;
                justify-content: center;
-               gap: 24px;}
+               gap: 24px;
+               flex-wrap: wrap;}
 .customer-link{width: 168px;
                height: 88px;
                border: 1px solid var(--light-gray-color);
