--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,7 @@ img{width: 100%; height: auto; display: block;}
     margin-top: 8px;
     margin-bottom: 8px;}
 .sec-four-block{padding-top: 32px; padding-bottom: 32px;}
-.workers-soc-list{display: flex;
+/*.workers-soc-list{display: flex;
                   justify-content: center;
                   gap: 24px;}
 .workers-soc-item{width: 40px;
@@ -241,7 +241,7 @@ img{width: 100%; height: auto; display: block;}
                   display: flex;
                   align-items: center;
                   justify-content: center;
-                  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+                  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}*/
 .workers-soc-link:hover, .workers-soc-link:focus{background-color: var(--violet-color);}
 .workers-soc-icon{fill: var(--light-color);}
 
@@ -654,6 +654,19 @@ footer .logo{margin: 0;}
     text-transform: capitalize;
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
+.workers-soc-list{display: flex;
+    justify-content: center;
+    gap: 24px;}
+.workers-soc-item{width: 40px;
+    height: 40px;}
+.workers-soc-link{width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--brand-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 }
 
 @media screen and (min-width: 768px) {
@@ -683,6 +696,19 @@ footer .logo{margin: 0;}
     text-transform: capitalize;
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
+.workers-soc-list{display: flex;
+    justify-content: center;
+    gap: 24px;}
+.workers-soc-item{width: 40px;
+    height: 40px;}
+.workers-soc-link{width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--brand-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 }
 
 @media screen and (min-width: 1158px) {
