--- a/css/styles.css
+++ b/css/styles.css
@@ -628,7 +628,7 @@ footer .logo{margin: 0;}
 .modal-fill{margin-bottom: 8px;}
 
 
-/*ADAPTATION*/
+/*ADAPTATION 428*/
 
 
 @media screen and (min-width: 428px) {
@@ -654,7 +654,21 @@ footer .logo{margin: 0;}
     text-transform: capitalize;
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
-}
+.workers-soc-list{display: flex;
+    justify-content: center;
+    gap: 24px;}
+.workers-soc-item{width: 40px;
+    height: 40px;}
+.workers-soc-link{width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--brand-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}}
+
+/*ADAPTATION 768*/
 
 @media screen and (min-width: 768px) {
     .container{width: 768px;}
@@ -683,7 +697,21 @@ footer .logo{margin: 0;}
     text-transform: capitalize;
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
-}
+.workers-soc-list{display: flex;
+    justify-content: center;
+    gap: 24px;}
+.workers-soc-item{width: 40px;
+    height: 40px;}
+.workers-soc-link{width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--brand-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}}
+
+/*ADAPTATION 1158*/
 
 @media screen and (min-width: 1158px) {
     .container{width: 1158px;}
@@ -709,4 +737,5 @@ footer .logo{margin: 0;}
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
     img{width: 100%; height: auto; display: block;}
+    
 }
