--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--gray-color);}
-img{width: 100%; height: auto; display: block;}
 .logo {
         font-family: "Raleway", sans-serif;
         font-weight: 800;
@@ -186,6 +185,22 @@ img{width: 100%; height: auto; display: block;}
 /*____SECTION THREE____*/
 
 
+/*img{width: 100%; height: auto; display: block;}
+.sec-three{padding-bottom: 120px;}
+.sec-three-list{gap: 24px;
+                flex-wrap: wrap;
+                margin: 0;
+                padding: 0;}
+.sec-three-h-two{margin: 0;
+    margin-bottom: 72px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--darker-color);}
+.sec-three-item{width: 100%;}*/
 
 /*____SECTION FOUR____*/
 
@@ -654,6 +669,7 @@ footer .logo{margin: 0;}
     text-transform: capitalize;
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
+img{width: 100%; height: auto; display: block;}
 .workers-soc-list{display: flex;
     justify-content: center;
     gap: 24px;}
@@ -686,6 +702,7 @@ footer .logo{margin: 0;}
                 margin: 0;
                 display: none;
                 padding: 0;}
+                img{width: 100%; height: auto; display: block;}
 .sec-three-h-two{margin: 0;
     display: none;
     margin-bottom: 72px;
@@ -721,7 +738,8 @@ footer .logo{margin: 0;}
     .div-two{display: flex;}
     .sec-four-item{width: calc((100% - 72px) / 4);}
     .workers-soc-list{justify-content: center;}
-    .sec-three{padding-bottom: 120px;}
+    img{width: 100%; height: auto; display: block;}
+.sec-three{padding-bottom: 120px;}
 .sec-three-list{gap: 24px;
                 flex-wrap: wrap;
                 margin: 0;
@@ -736,6 +754,5 @@ footer .logo{margin: 0;}
     text-transform: capitalize;
     color: var(--darker-color);}
 .sec-three-item{width: 100%;}
-    img{width: 100%; height: auto; display: block;}
-    
+img{width: 100%; height: auto; display: block;}
 }
