--- a/css/styles.css
+++ b/css/styles.css
@@ -92,11 +92,11 @@ body {
 /*____SECTION ONE____*/
 
 .sec-one{background-color: var(--darker-color);
-        background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
+        /*background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: cover;
+        background-size: cover;*/
         margin-left: auto;
         margin-right: auto;
         width: 1440px;
