--- a/css/styles.css
+++ b/css/styles.css
@@ -186,8 +186,8 @@ body {
 /*____SECTION THREE____*/
 
 
-/*img{width: 100%; height: auto; display: block;}
-.sec-three{padding-bottom: 120px;}
+img{width: 100%; height: auto; display: block;}
+.sec-three{padding-bottom: 120px; display: none;}
 .sec-three-list{gap: 24px;
                 flex-wrap: wrap;
                 margin: 0;
@@ -201,7 +201,7 @@ body {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--darker-color);}
-.sec-three-item{width: 100%;}*/
+.sec-three-item{width: 100%;}
 
 /*____SECTION FOUR____*/
 
@@ -648,7 +648,6 @@ footer .logo{margin: 0;}
 
 
 @media screen and (min-width: 428px) {
-    .header-group{}
     .container{width: 428px;}
     .workers-soc-list{justify-content: space-evenly;
                       }
@@ -740,7 +739,6 @@ img{width: 100%; height: auto; display: block;}
     .div-two{display: flex;}
     .sec-four-item{width: calc((100% - 72px) / 4);}
     .workers-soc-list{justify-content: center;}
-    img{width: 100%; height: auto; display: block;}
 .sec-three{padding-bottom: 120px;}
 .sec-three-list{gap: 24px;
                 flex-wrap: wrap;
