--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,8 @@ body {
             margin-left: 332px; 
             padding-top: 24px; 
             padding-bottom: 24px;}
-.header-menu{fill: var(--darker-color);}
+.header-menu{fill: var(--darker-color);
+    position: absolute;}
 .header-mail{margin-right: 40px;
     font-size: 16px;
     line-height: 1.5;
