--- a/css/styles.css
+++ b/css/styles.css
@@ -688,6 +688,7 @@ img{width: 100%; height: auto; display: block;}
     gap: 24px;}
 .workers-soc-item{width: 40px;
     height: 40px;}
+.port-list{}
 .workers-soc-link{width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -743,6 +744,7 @@ img{width: 100%; height: auto; display: block;}
     gap: 24px;}
 .workers-soc-item{width: 40px;
     height: 40px;}
+.port-list{}
 .workers-soc-link{width: 100%;
     height: 100%;
     border-radius: 50%;
