--- a/css/styles.css
+++ b/css/styles.css
@@ -696,7 +696,8 @@ img{width: 100%; height: auto; display: block;}
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+    .footer-div{flex-wrap: wrap;}}
 
 /*ADAPTATION 768*/
 
@@ -752,7 +753,8 @@ img{width: 100%; height: auto; display: block;}
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+    .footer-div{flex-wrap: wrap;}}
 
 /*ADAPTATION 1158*/
 
