--- a/css/styles.css
+++ b/css/styles.css
@@ -688,7 +688,6 @@ img{width: 100%; height: auto; display: block;}
     gap: 24px;}
 .workers-soc-item{width: 40px;
     height: 40px;}
-.port-list{}
 .workers-soc-link{width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -697,7 +696,13 @@ img{width: 100%; height: auto; display: block;}
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
-    .footer-div{flex-wrap: wrap;}}
+    .footer-div{flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        text-align: center;}
+.footer-soc-div{align-items: center;
+justify-content: center;
+text-align: center;}}
 
 /*ADAPTATION 768*/
 
@@ -745,7 +750,6 @@ img{width: 100%; height: auto; display: block;}
     gap: 24px;}
 .workers-soc-item{width: 40px;
     height: 40px;}
-.port-list{}
 .workers-soc-link{width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -753,8 +757,7 @@ img{width: 100%; height: auto; display: block;}
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
-    .footer-div{flex-wrap: wrap;}}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}}
 
 /*ADAPTATION 1158*/
 
