--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,6 @@ body {
     line-height: 1.2;
     color: var(--darker-color);}
 .sec-two-text{margin: 0;padding: 0;
-    max-width: 100%;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -662,7 +661,7 @@ footer .logo{margin: 0;}
         letter-spacing: 0.02em;
         text-transform: capitalize;}
     .sec-two-text{font-weight: 500;
-        max-width: 100%;
+        max-width: 356px;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;}
@@ -721,7 +720,7 @@ text-align: center;}}
         letter-spacing: 0.02em;
         text-transform: capitalize;}
     .sec-two-text{font-weight: 500;
-        max-width: 100%;
+        max-width: 356px;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;}
@@ -777,8 +776,7 @@ text-align: center;}}
     .sec-two-text{font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
-        letter-spacing: 0.02em;
-        max-width: 100%;}
+        letter-spacing: 0.02em;}
     .section{top: 120px;
              padding-bottom: 120px;}
     .div-two{display: flex;}
