--- a/css/styles.css
+++ b/css/styles.css
@@ -99,10 +99,12 @@ body {
         rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: cover;
+        /*background-size: cover;*/
+        background-size: 1440px 600px;
         margin-left: auto;
         margin-right: auto;
         width: 1440px;
+        height: 600px;
         padding-top: 188px;
         padding-bottom: 188px;}
 .div-one{display: flex;
@@ -650,7 +652,10 @@ footer .logo{margin: 0;}
 /*ADAPTATION 428*/
 
 
-@media screen and (min-width: 428px) {
+@media screen and (min-width: 428px),(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
+        rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);}
     .container{width: 428px;}
     .workers-soc-list{justify-content: space-evenly;}
     .sec-two-li{width: calc((100% - 72px) / 1);}
@@ -707,7 +712,10 @@ text-align: center;}}
 
 /*ADAPTATION 768*/
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px),(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
+        rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);}
     .container{width: 768px;}
     .header-add{display: flex;}
     .header-nav{display: flex;}
@@ -718,7 +726,9 @@ text-align: center;}}
         font-size: 36px;
         line-height: 1.1;
         letter-spacing: 0.02em;
-        text-transform: capitalize;}
+        text-transform: capitalize;
+        justify-content: center;
+        align-items: center;}
     .sec-two-text{font-weight: 500;
         max-width: 356px;
         font-size: 16px;
