--- a/css/styles.css
+++ b/css/styles.css
@@ -652,8 +652,7 @@ footer .logo{margin: 0;}
 /*ADAPTATION 428*/
 
 
-@media screen and (min-width: 428px),(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
+@media screen and (min-width: 428px){
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);}
     .container{width: 428px;}
@@ -714,8 +713,7 @@ text-align: center;}}
 
 /*ADAPTATION 768*/
 
-@media screen and (min-width: 768px),(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
+@media screen and (min-width: 768px){
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);}
     .container{width: 768px;}
