--- a/css/styles.css
+++ b/css/styles.css
@@ -769,6 +769,11 @@ text-align: center;}}
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}}
 
+/*@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px) {
+    .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
+        rgba(46, 47, 66, 0.7)), url(../images/tabl.jpg)}
+}*/
+
 /*ADAPTATION 1158*/
 
 @media screen and (min-width: 1158px) {
