--- a/css/styles.css
+++ b/css/styles.css
@@ -98,13 +98,14 @@ body {
         background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
         background-repeat: no-repeat;
-        background-position: center;
-        /*background-size: cover;*/
-        background-size: 1440px 600px;
+        text-align: center;
+        /*background-position: center;*/
+        background-size: cover;
         margin-left: auto;
         margin-right: auto;
-        width: 1440px;
+        width: 100%;
         height: 600px;
+        background-position: 50% 50%;
         padding-top: 188px;
         padding-bottom: 188px;}
 .div-one{display: flex;
