--- a/css/styles.css
+++ b/css/styles.css
@@ -654,8 +654,10 @@ footer .logo{margin: 0;}
 
 
 @media screen and (min-width: 428px){
-    .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
-        rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);}
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px) {
+        .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
+            rgba(46, 47, 66, 0.7)), url(../images/mob.jpg)}
+    }
     .container{width: 428px;}
     .workers-soc-list{justify-content: space-evenly;}
     .sec-two-li{width: calc((100% - 72px) / 1);}
@@ -715,8 +717,11 @@ text-align: center;}}
 /*ADAPTATION 768*/
 
 @media screen and (min-width: 768px){
-    .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
-        rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);}
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px) {
+        .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
+            rgba(46, 47, 66, 0.7)), url(../images/tabl.jpg)}
+    }
+    
     .container{width: 768px;}
     .header-add{display: flex;}
     .header-nav{display: flex;}
@@ -769,11 +774,6 @@ text-align: center;}}
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}}
-
-/*@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px) {
-    .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
-        rgba(46, 47, 66, 0.7)), url(../images/tabl.jpg)}
-}*/
 
 /*ADAPTATION 1158*/
 
