--- a/css/styles.css
+++ b/css/styles.css
@@ -653,6 +653,27 @@ footer .logo{margin: 0;}
 /*ADAPTATION 428*/
 
 
+@media screen and (max-width: 428px) {
+    .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
+        rgba(46, 47, 66, 0.7))}
+    .sec-h-one{text-align: center;}
+    .sec-two-text{font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;}
+    .workers-soc-item{width: 40px;
+            height: 40px;}
+    .workers-soc-link{width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: var(--brand-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+    .workers-soc-list{display: flex;
+                justify-content: center;
+                gap: 24px;}
+}
 @media screen and (min-width: 428px){
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/mob.jpg)}
