--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
              margin: 0; padding: 0;
              }
 .header-nav{/*display: flex;*/
-            display: none;
+            /*display: none;*/
             align-items: center;
             /*padding-top: 24px;
             padding-bottom: 24px;*/}
@@ -78,6 +78,7 @@ body {
             /*margin-left: 332px;*/ 
             /*padding-top: 24px; 
             padding-bottom: 24px;*/}
+.header-but-menu{display: none;}
 .header-menu{fill: var(--darker-color);
     position: absolute;}
 .header-mail{margin-right: 40px;
@@ -678,6 +679,7 @@ footer .logo{margin: 0;}
                 gap: 24px;}
             
 @media screen and (min-width: 428px){
+    .header-list{display: none;}
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/mob.jpg)}
         @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2),
@@ -769,6 +771,7 @@ text-align: center;}}
     .container{width: 768px;}
     .header-add{display: flex; margin-left: auto;}
     .header-nav{display: flex;}
+    .header-list{display: flex;}
     .workers-soc-list{justify-content: space-evenly;}
     .sec-two-li{width: calc((100% - 24px) / 2);}
     .sec-two-list{flex-wrap: wrap;}
@@ -843,6 +846,7 @@ text-align: center;}}
     .header-nav{display: flex;
         /*padding-top: 24px;
         padding-bottom: 24px;*/}
+    .header-list{display: flex;}
     .sec-two-list{flex-wrap: nowrap;}
     .sec-two-item{font-weight: 500;
             letter-spacing: 0.02em;
