--- a/css/styles.css
+++ b/css/styles.css
@@ -698,7 +698,7 @@ footer .logo{margin: 0;}
         line-height: 1.1;
         text-transform: capitalize;}
     .sec-button{margin-top: 72px;}
-    .container{width: 428px;
+    .container{/*width: 428px;*/
     padding-left: 16px; padding-right: 16px;}
     .workers-soc-list{justify-content: space-evenly;}
     .sec-two-li{width: calc((100% - 72px) / 1);}
