--- a/css/styles.css
+++ b/css/styles.css
@@ -13,11 +13,11 @@ body {
         margin-right: 76px;
       }
 .header{background-color: var(--white-color);
-    border-bottom: 1px solid var(--lighter-color);
+    /*border-bottom: 1px solid var(--lighter-color);
     box-shadow: 
     0px 2px 1px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16), 
-    0px 1px 6px rgba(46, 47, 66, 0.08);}
+    0px 1px 6px rgba(46, 47, 66, 0.08);*/}
 .header-link{
     color: var(--darker-color);
     font-weight: 500;
@@ -682,6 +682,9 @@ footer .logo{margin: 0;}
                 gap: 24px;}
             
 @media screen and (min-width: 428px){
+    .header{margin-top: 24px; 
+            margin-bottom: 24px;
+            }
     .header-list{display: none;}
     .header-but-menu{display: flex;}
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
@@ -757,6 +760,13 @@ text-align: center;}}
 /*ADAPTATION 768*/
 
 @media screen and (min-width: 768px){
+        .header{border-bottom: 1px solid var(--lighter-color);
+            box-shadow: 
+            0px 2px 1px rgba(46, 47, 66, 0.08), 
+            0px 1px 1px rgba(46, 47, 66, 0.16), 
+            0px 1px 6px rgba(46, 47, 66, 0.08);
+            margin-top: 0; 
+            margin-bottom: 0;}
         .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
             rgba(46, 47, 66, 0.7)), url(../images/tabl.jpg)}
             @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2),
@@ -835,6 +845,13 @@ text-align: center;}}
 /*ADAPTATION 1158*/
 
 @media screen and (min-width: 1158px) {
+    .header{border-bottom: 1px solid var(--lighter-color);
+        box-shadow: 
+        0px 2px 1px rgba(46, 47, 66, 0.08), 
+        0px 1px 1px rgba(46, 47, 66, 0.16), 
+        0px 1px 6px rgba(46, 47, 66, 0.08);
+        margin-top: 0; 
+        margin-bottom: 0;}
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg)}
         @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2),
