--- a/css/styles.css
+++ b/css/styles.css
@@ -686,7 +686,8 @@ footer .logo{margin: 0;}
             margin-bottom: 24px;
             }
     .header-list{display: none;}
-    .header-but-menu{display: flex;}
+    .header-but-menu{display: flex;
+                     }
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/mob.jpg)}
         @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2),
