--- a/css/styles.css
+++ b/css/styles.css
@@ -80,10 +80,14 @@ body {
             padding-bottom: 24px;*/}
 .header-but-menu{display: none;
                  background: none;
-                 border: none;}
+                 border: none;
+                 margin-left: auto;
+                 align-items: center;
+                 justify-content: center;
+                 padding: 0;}
 .header-menu{position: absolute;
              stroke: var(--darker-color);
-             }
+             margin-left: auto;}
 .header-mail{margin-right: 40px;
     font-size: 16px;
     line-height: 1.5;
