--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ body {
         background-size: cover;
         margin-left: auto;
         margin-right: auto;
-        width: 100%;
+        /*width: 100%;*/
         height: 600px;
         background-position: 50% 50%;
         padding-top: 188px;
@@ -699,6 +699,7 @@ footer .logo{margin: 0;}
             .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/mobx2.jpg)}
         }
+    .sec-one{width: 100%;}
     .sec-h-one{text-align: center;
         width: 320px;
         font-size: 36px;
@@ -779,6 +780,7 @@ text-align: center;}}
                 .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
             rgba(46, 47, 66, 0.7)), url(../images/tablx2.jpg)}
             }
+    .sec-one{width: 100%;}
     .add-list{display: block;}
     .header-but-menu{display: none;}
     .sec-h-one{width: 496px;
@@ -865,6 +867,7 @@ text-align: center;}}
     .sec-one{background-image: linear-gradient( rgba(46, 47, 66, 0.7),  
         rgba(46, 47, 66, 0.7)), url(../images/people-officex2.jpg)}
         }
+    .sec-one{width: 1400px;}
     .container{width: 1158px; 
         /*padding-left: 156px; padding-right: 156px;*/
         margin-left: 156px; margin-right: 156px;}
@@ -904,7 +907,7 @@ text-align: center;}}
     .workers-soc-list{justify-content: center;}
 .sec-three{/*padding-bottom: 120px;*/ display: block;}
 .sec-three-list{gap: 24px;
-                flex-wrap: wrap;
+                flex-wrap: nowrap;
                 margin: 0;
                 display: flex;
                 padding: 0;}
