--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,8 @@ body {
         text-align: center;
         /*background-position: center;*/
         background-size: cover;
-        /*margin-left: auto;
-        margin-right: auto;*/
+        margin-left: auto;
+        margin-right: auto;
         margin: 0 auto;
         /*width: 100%;*/
         height: 600px;
