--- a/css/styles.css
+++ b/css/styles.css
@@ -360,7 +360,7 @@ footer .logo{margin: 0;}
               filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
               border-radius: 4px;
               background: var(--darker-color);
-              width: 264px;
+              /*width: 264px;*/
               height: 40px;
               color: var(--white-color);
               font-size: 12px;
@@ -762,7 +762,9 @@ img{width: 100%; height: auto; display: block;}
         text-align: center;}
 .footer-soc-div{align-items: center;
 justify-content: center;
-text-align: center;}}
+text-align: center;}
+.footer-input{width: 398px;}
+}
 
 /*ADAPTATION 768*/
 
@@ -849,7 +851,16 @@ text-align: center;}}
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+    .footer-input{width: 264px;}
+    .subscribe-p{color: var(--white-color);
+        margin: 0;
+        padding: 0;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;}
+    }
 
 /*ADAPTATION 1158*/
 
@@ -925,4 +936,12 @@ text-align: center;}}
     color: var(--darker-color);}
 .sec-three-item{width: 360px; height: 300px;}
 img{width: 100%; height: auto; display: block;}
+.footer-input{width: 264px;}
+.subscribe-p{color: var(--white-color);
+    margin: 0;
+    padding: 0;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;}
 }
