--- a/css/styles.css
+++ b/css/styles.css
@@ -760,9 +760,10 @@ img{width: 100%; height: auto; display: block;}
         align-items: center;
         justify-content: center;
         text-align: center;}
+.customer-link{width: 190px;}
 .footer-soc-div{align-items: center;
-justify-content: center;
-text-align: center;}
+                justify-content: center;
+                text-align: center;}
 .footer-input{width: 398px;}
 }
 
@@ -860,6 +861,7 @@ text-align: center;}
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;}
+    .customer-link{width: 168px;}
     }
 
 /*ADAPTATION 1158*/
@@ -908,7 +910,7 @@ text-align: center;}
             letter-spacing: 0.02em;
             font-size: 20px;
             line-height: 1.2;}
-    .sec-five-list{gap: 24px;}
+    .sec-five-list{gap: 24px; flex-wrap: nowrap;}
     .sec-two-text{font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
@@ -944,4 +946,5 @@ img{width: 100%; height: auto; display: block;}
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;}
+.customer-link{width: 168px;}
 }
